<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTagActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            >



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/white"
                >

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_new"
                    android:fontFamily="@font/product_sans_regular"
                    android:textColor="@color/black_shade_1"
                    android:textSize="18sp"
                    />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/title_heder_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_tag_name"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                app:layout_constraintStart_toStartOf="@id/guildine_start_10"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                />

            <EditText
                android:id="@+id/title_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_heder_txt"
                app:layout_constraintStart_toStartOf="@id/guildine_start_10"
                app:layout_constraintEnd_toStartOf="@id/guildine_end_10"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:padding="15dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="15sp"
                android:textColor="@color/black_shade_1"
                android:maxLines="1"
                android:maxLength="10"
                />


            <View
                android:id="@+id/separetor_one"
                android:layout_width="0dp"
                android:layout_height="0.1dp"
                app:layout_constraintTop_toBottomOf="@id/title_edt"
                app:layout_constraintStart_toStartOf="@id/guildine_start_10"
                app:layout_constraintEnd_toStartOf="@id/guildine_end_10"
                android:layout_marginTop="30dp"
                android:background="@color/light_gray"
                />



            <TextView
                android:id="@+id/title_picker_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_tag_color"
                app:layout_constraintTop_toBottomOf="@id/separetor_one"
                app:layout_constraintStart_toStartOf="@id/guildine_start_10"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                app:drawableStartCompat="@drawable/icon_picker"
                android:drawablePadding="10dp"
                app:drawableTint="@color/light_gray"
                android:gravity="center_vertical"
                />

            <View
                android:id="@+id/color_pallete"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="@id/guildine_start_10"
                app:layout_constraintEnd_toEndOf="@id/guildine_end_10"
                app:layout_constraintTop_toBottomOf="@id/title_picker_txt"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                />

            <TextView
                android:id="@+id/desc_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/color_pallete"
                app:layout_constraintEnd_toEndOf="@id/color_pallete"
                app:layout_constraintTop_toBottomOf="@id/color_pallete"
                android:padding="5dp"
                android:textAlignment="center"
                android:text="@string/this_color_visible_your_task_list"
                android:fontFamily="@font/product_sans_regular"
                android:textSize="12sp"
                />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="0dp"
                android:layout_height="45dp"
                app:layout_constraintStart_toStartOf="@id/guildine_start_10"
                app:layout_constraintEnd_toEndOf="@id/guildine_end_10"
                app:layout_constraintTop_toBottomOf="@id/desc_txt"
                android:layout_marginTop="25dp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:fontFamily="@font/product_sans_bold"
                android:background="@drawable/button_background_primary_color"
                android:layout_marginBottom="20dp"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guildine_start_10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guildine_end_10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>