<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddTodoActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            >



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_task_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/add_task_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:fontFamily="@font/product_sans_regular"
            android:textColor="@color/black_shade_1"
            android:textSize="18sp"
            />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/title_heder_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_are_you_planning"
        app:layout_constraintTop_toBottomOf="@id/add_task_toolbar"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        />

    <EditText
        android:id="@+id/title_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_heder_txt"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        app:layout_constraintEnd_toStartOf="@id/guildine_end_10"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="15sp"
        android:textColor="@color/black_shade_1"
        android:maxLines="1"
        android:maxLength="50"
        />


    <View
        android:id="@+id/separetor_one"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        app:layout_constraintTop_toBottomOf="@id/title_edt"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        app:layout_constraintEnd_toStartOf="@id/guildine_end_10"
        android:layout_marginTop="30dp"
        android:background="@color/light_gray"
        />


    <TextView
        android:id="@+id/date_time_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/separetor_one"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        app:layout_constraintEnd_toEndOf="@id/guildine_end_10"
        android:layout_marginTop="20dp"
        app:drawableStartCompat="@drawable/icon_date_time"
        app:tint ="@color/light_gray"
        tools:text="Tue 20 may 2021 12.00 pm"
        android:textSize="15sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/black_shade_1"
        android:background="@drawable/edit_text_background"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />



    <TextView
        android:id="@+id/title_note_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        app:layout_constraintTop_toBottomOf="@id/date_time_txt"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/icon_add_note" />


    <EditText
        android:id="@+id/description_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_note_txt"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        app:layout_constraintEnd_toStartOf="@id/guildine_end_10"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:padding="15dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="15sp"
        android:textColor="@color/black_shade_1"
        android:maxLength="200"
        />


    <TextView
        android:id="@+id/title_tag_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_tag"
        app:layout_constraintTop_toBottomOf="@id/description_edt"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="15sp"
        android:textColor="@android:color/darker_gray"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/icon_tag_50" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tags_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_tag_txt"
            android:layout_marginTop="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:clipToPadding="false"
            />



    <View
        android:id="@+id/separetor_two"
        android:layout_width="0dp"
        android:layout_height="0.1dp"
        app:layout_constraintTop_toBottomOf="@id/tags_list"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        app:layout_constraintEnd_toStartOf="@id/guildine_end_10"
        android:layout_marginTop="30dp"
        android:background="@color/light_gray"
        />


    <TextView
        android:id="@+id/title_notify_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_me"
        app:layout_constraintTop_toBottomOf="@id/separetor_two"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="15sp"
        android:textColor="@color/black_shade_1"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/icon_bell" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notify_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guildine_end_10"
        app:layout_constraintTop_toTopOf="@id/title_notify_txt"
        app:layout_constraintBottom_toBottomOf="@id/title_notify_txt"
        />


    <Button
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="@id/guildine_start_10"
        app:layout_constraintEnd_toEndOf="@id/guildine_end_10"
        app:layout_constraintTop_toBottomOf="@id/title_notify_txt"
        android:layout_marginTop="25dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:fontFamily="@font/product_sans_bold"
        android:background="@drawable/button_background_primary_color"
        android:layout_marginBottom="20dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guildine_start_10"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guildine_end_10"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>